--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         <div class="container position-relative">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <h2 style="font-size: 40px;">Contact us</h2>
+                    <h2 style="font-size: 40px;">Contact Me</h2>
                     <hr>
                     <p class="w-lg-50" style="font-size: 12px;text-align: center;font-style: italic;">Contact me anytime without hesitation; I offer quality service at low prices. Your satisfaction is my top priority. Let's connect!</p>
                 </div>
