--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                 </svg></div>
                             <h4 class="card-title" style="font-family: 'Josefin Sans', sans-serif;">CSS</h4>
                             <hr>
-                            <p class="card-text" style="text-align: center;"><br>Skilled in <strong>CSS</strong>, allowing for the creation of visually <br>engaging styles and responsive designs. Using frameworks like Flexbox <br>and CSS Grid, I build layouts that adapt fluidly to different screen <br>sizes, ensuring usability and aesthetics.<br><br></p>
+                            <p class="card-text" style="text-align: center;"><br>Skilled in <strong>CSS</strong>, allowing for the creation of visually <br>engaging styles and responsive designs. Using frameworks like Flexbox and CSS Grid, I build layouts that adapt fluidly to different screen <br>sizes, ensuring usability and aesthetics.<br><br></p>
                         </div>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                                     <path d="M5.062 12h3.475c1.804 0 2.888-.908 2.888-2.396 0-1.102-.761-1.916-1.904-2.034v-.1c.832-.14 1.482-.93 1.482-1.816 0-1.3-.955-2.11-2.542-2.11H5.062zm1.313-4.875V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23zm0 3.762V8.162h1.822c1.236 0 1.887.463 1.887 1.348 0 .896-.627 1.377-1.811 1.377H6.375z"></path>
                                     <path d="M0 4a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4zm4-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3z"></path>
                                 </svg></div>
-                            <h4 class="card-title" style="font-family: 'Josefin Sans', sans-serif;">BOOTSRAP</h4>
+                            <h4 class="card-title" style="font-family: 'Josefin Sans', sans-serif;">BOOTSTRAP</h4>
                             <hr>
                             <p class="card-text" style="text-align: center;"><br>Knowledgeable in <strong>Bootstrap</strong>, leveraging its pre-built <br>components and grid system for efficient web development. This framework accelerates the creation of responsive layouts, enabling me to deliver mobile-first designs with speed and ease.<br><br></p>
                         </div>
@@ -158,7 +158,7 @@
                                 </svg></div>
                             <h4 class="card-title" style="font-family: 'Josefin Sans', sans-serif;">UI/UX</h4>
                             <hr>
-                            <p class="card-text" style="text-align: center;">Creating user-centered designs that prioritize usability and aesthetics,<br> ensuring a seamless experience. Conducting user research and usability <br>testing to inform design decisions, I aim to enhance interaction and <br>satisfaction across platforms.</p>
+                            <p class="card-text" style="text-align: center;">Creating user-centered designs that prioritize usability and aesthetics,<br> ensuring a seamless experience. Conducting user research and usability testing to inform design decisions, I aim to enhance interaction and <br>satisfaction across platforms.</p>
                         </div>
                     </div>
                 </div>
