--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 </svg></div>
                             <h4 class="card-title" style="font-family: 'Josefin Sans', sans-serif;">UI/UX</h4>
                             <hr>
-                            <p class="card-text" style="text-align: center;">Creating user-centered designs that prioritize usability and aesthetics,<br> ensuring a seamless experience. Conducting user research and usability testing to inform design decisions, I aim to enhance interaction and <br>satisfaction across platforms.</p>
+                            <p class="card-text" style="text-align: center;">Creating user-centered designs that prioritize usability and aesthetics,<br> ensuring a seamless experience. Conducting user research and usability testing to inform design decisions, I aim to enhance interaction and satisfaction across platforms.</p>
                         </div>
                     </div>
                 </div>
