--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </section>
         </section>
     </section>
-    <section id="skills" style="min-height: 100svh;width: 100%;background: #ffffff;margin: 1px 1px 5rem 1px;">
+    <section id="skills" style="width: 100%;background: #ffffff;margin: 1px 1px 5rem 1px;">
         <div class="container py-4 py-xl-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
@@ -137,7 +137,7 @@
             </div>
         </div>
     </section>
-    <section id="sevices" style="min-height: 65svh;width: 100%;background: #ffffff;margin: 1px 1px 1px 1px;">
+    <section id="sevices" style="width: 100%;background: #ffffff;margin: 1px 1px 1px 1px;">
         <div class="container py-4 py-xl-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
