--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                 </svg></div>
                             <div class="px-2">
                                 <h6 class="mb-0">Phone</h6>
-                                <p class="mb-0">+un-avil</p>
+                                <p class="mb-0">+91 8086128240</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center p-3">
@@ -321,7 +321,7 @@
                             </a>
                             <div class="px-2">
                                 <h6 class="mb-0">Instagram</h6>
-                                <p class="mb-0">--</p>
+                                <p class="mb-0">renjith_raju_r.l</p>
                             </div>
                         </div>
                     </div>
